# Provectrus_test

./: .gitignore  PROJECT_PLAN.md  README.md  generate_fake_data.py  pyproject.toml  requirements.txt
presentations/: LLM_USAGE_LOG.md  TECHNICAL_DOCUMENTATION.md
src/: ai_insights.py  analytics.py  dashboard.py  database.py  ingest.py  ml_anomaly.py  models.py
